# osg-multipass

./: CMakeLists.txt  LICENSE  README.md  teapot.osg
shaders/: blendFragmentShader.glsl  blendVertexShader.glsl
src/: main.cpp
